# Holistic_Control

./: About_Research.md  README.md  RTAB_Readme.md  about_isaac_sim.md  isaac_settings.sh  jc.py  research_topic.md  settings.humble.repos  topic_gpt_answer.md  whole_settings.sh
OctoMap/octomap/: CMakeLists.txt
OctoMap/octomap/lib/: libdynamicedt3d.so.1.10  libdynamicedt3d.so.1.10.0  liboctomap.so.1.10.0  liboctomath.so.1.10.0  liboctovis.so.1.10  liboctovis.so.1.10.0
OctoMap/octomap/lib/cmake/dynamicEDT3D/: dynamicEDT3DConfig.cmake  dynamicEDT3DTargets.cmake
OctoMap/octomap/lib/cmake/octomap/: octomap-config.cmake  octomap-targets.cmake
OctoMap/octomap/lib/cmake/octovis/: octovis-config.cmake  octovis-targets.cmake
controller_packages/realsense_gazebo_plugin/: CMakeLists.txt  package.xml
controller_packages/realsense_gazebo_plugin/include/realsense_gazebo_plugin/: RealSensePlugin.h  gazebo_ros_realsense.h
controller_packages/realsense_gazebo_plugin/src/: RealSensePlugin.cpp  gazebo_ros_realsense.cpp
controller_packages/roboticsgroup_gazebo_plugins/: CMakelists.txt  package.xml
controller_packages/roboticsgroup_gazebo_plugins/include/roboticsgroup_gazebo_plugins/: disable_link_plugin.h  mimic_joint_plugin.h
controller_packages/roboticsgroup_gazebo_plugins/src/: disable_link_plugin.cpp  mimic_joint_plugin.cpp
mobile_manipulator/: CMakeLists.txt  package.xml
mobile_manipulator/config/: initial_positions.yaml  initial_value.yaml  ros2_control.yaml
mobile_manipulator/launch/: arm.launch.py  base.launch.py  gazebo.launch.py  ros2_model.launch.py  rtabmap.launch.py  view.launch.py  view_robot.launch.py
mobile_manipulator/meshes/base/candidate/: base_body.stl
mobile_manipulator/meshes/base/not_use/: collision_base_link.STL  fl_wheel.STL  fr_wheel.STL  rl_wheel.STL  rr_wheel.STL
mobile_manipulator/meshes/gripper/: D435.stl
mobile_manipulator/rviz/: arm_and_gripper.rviz  base.rviz  gazebo.rviz  view_robot.rviz
mobile_manipulator/scripts/: control.py
mobile_manipulator/urdf/: aa.urdf  arm.xacro  arm_and_gripper.xacro  base.xacro  camera.xacro  execution.urdf.xacro  execution.xacro  gazebo_camera.xacro  gazebo_lidar.xacro  gazebo_robot.urdf  gazebo_settings.xacro  ignition_robot.urdf  integrate_execution.xacro  integrate_gazebo.xacro  integrate_model.xacro  integrate_model_without_ros2.urdf  integrate_ros2_control.xacro  integrated_model.xacro  integrated_model_simple_version.xacro  isaac_robot.urdf  robot.urdf  view.urdf.xacro  view.xacro
mobile_manipulator/worlds/: td3.world
td3_train/: CMakeLists.txt  package.xml
td3_train/scripts/: TD3.py  TD3_backup.py  a_star.py  os_pkg_path.py  path.py  path_planning.py  replay_memory.py  train.py  train_backup.py  train_laser.py  train_lidar.py  train_velodyne_node.py
td3_train/scripts/prev/: train_backup.py
