<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mobile_manipulator</name>
  <version>0.2.2</version>
  <description>modified</description>
  <author email="jongyoonpark0621@gmail.com">j-wye</author>
  <maintainer email="jongyoonpark0621@gmail.com"></maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>

  <exec_depend>launch_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>robotiq_description</exec_depend>
  <exec_depend>picknik_reset_fault_controller</exec_depend>
  <exec_depend>picknik_twist_controller</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
