<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mobile_manipulator</name>
  <version>0.2.2</version>
  <description>modified</description>
  <author email="jongyoonpark0621@gmail.com">j-wye</author>
  <maintainer email="jongyoonpark0621@gmail.com">j-wye</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>ament_cmake</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>rviz2</build_depend>
  <build_depend>spdlog</build_depend> <!-- spdlog 추가 -->
  <build_depend>rosidl_typesupport_c</build_depend> <!-- rosidl_typesupport_c 추가 -->

  <!-- Execution dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <!-- <exec_depend>controller_manager</exec_depend> -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>kortex_driver</exec_depend>
  <exec_depend>picknik_twist_controller</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>spdlog</exec_depend> <!-- spdlog 추가 -->
  <exec_depend>rosidl_typesupport_c</exec_depend> <!-- rosidl_typesupport_c 추가 -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
