<?xml version="1.0"?>
<package format="2">
  <name>roboticsgroup_gazebo_plugins</name>
  <version>0.1.0</version>
  <description>Collection of gazebo plugins</description>

  <author email="costashatz@gmail.com">Konstantinos Chatzilygeroudis</author>
  <maintainer email="costashatz@gmail.com">Konstantinos Chatzilygeroudis</maintainer>
  <maintainer email="jongyoonpark0621@gmail.com">J-wye</maintainer>

  <license>TODO</license>

  <url type="repository">https://github.com/roboticsgroup/roboticsgroup_gazebo_plugins</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>control_toolbox</build_export_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>control_toolbox</exec_depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>
</package>